# swagger_server/models/__init__.py
@@ -8,3 +8,4 @@ from swagger_server.models.datoteka_v_besedilo_ocr_body import DatotekaVBesedilo
 from swagger_server.models.izlusci_body import IzlusciBody
 from swagger_server.models.oznaci_besedilo_body import OznaciBesediloBody
 from swagger_server.models.terminoloski_kandidat import TerminoloskiKandidat
+from swagger_server.models.job_response import JobResponse
